# LionEyes

./: .gitignore  CMakeLists.txt  FaceDetection.cbp  FaceDetection.depend  FaceDetection.layout  lol.txt  main.cpp
eyes/: eyes.ino
